<resources>
    <string name="app_name">PlayerDemoUI</string>
    <string name="nav_title_home">主页</string>
    <string name="nav_title_live">直播</string>
    <string name="nav_title_music">音乐</string>
    <string name="nav_title_local">本地</string>

    <string name="activity_setting_title">设置</string>
    <string name="activity_detail_title">详情页</string>

    <string name="tab_title_short_video">短视频</string>
    <string name="tab_title_mini_video">小视频</string>

    <string name="menu_title_settings">设置</string>

    <string name="preference_title_version">版本号</string>

    <string name="preference_category_title_base_setting">基本设置</string>
    <string name="preference_title_ifbuffer">使用缓存</string>
    <string name="preference_title_multiprocess">多进程</string>
    <string name="preference_title_multiinstance">多实例</string>
    <string name="preference_title_decode_mode">解码模式</string>

    <string name="preference_category_title_developer_setting">开发者选项</string>
    <string name="preference_title_check_log">查看日志</string>
    <string name="preference_title_performance_observe">性能监控</string>
    <string name="preference_title_performance_statistics">性能统计</string>
    <string name="preference_title_io_observe">io监控</string>

    <string name="preference_summary_off_multiinstance">使用单实例播放</string>
    <string name="preference_summary_on_multiinstance">使用多实例播放</string>
    <string name="preference_summary_off_multiprocess">使用单进程播放</string>
    <string name="preference_summary_on_multiprocess">使用多进程播放</string>

    <string name="text_subtitle">字幕</string>
    <string name="text_bullet_subtitles">弹幕</string>
    <string name="text_fade_in_fade_out">音频淡入淡出</string>

    <string name="text_play_speed">倍速播放</string>
    <string name="text_play_speed_0.5x">0.5x</string>
    <string name="text_play_speed_1x">1x</string>
    <string name="text_play_speed_2x">2x</string>
    <string name="text_play_speed_4x">4x</string>

    <string name="text_resolution">分辨率</string>
    <string name="text_resolution_480">480p</string>
    <string name="text_resolution_720">720p</string>
    <string name="text_resolution_1080">1080p</string>
    <string name="text_resolution_4k">4k</string>

    <string name="text_fps">帧率</string>
    <string name="text_fps_30">30</string>
    <string name="text_fps_60">60</string>

    <string name="text_play_mode">播放模式</string>
    <string name="text_play_mode_normal">播完暂停</string>
    <string name="text_play_mode_looping">循环播放</string>
    
    <string name="text_decode_mode">解码模式</string>
    <string name="text_decode_mode_self_adaption">自适应</string>
    <string name="text_decode_mode_hard_first">硬解优先</string>
    <string name="text_decode_mode_soft_first">软解优先</string>
    
    <string name="text_denoise">降噪</string>
    
    <string name="text_voice_change">变声变调</string>
    <string name="text_equilizer">均衡器</string>
</resources>