<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.study.playerdemoui.ui.home.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.study.playerdemoui.ui.live.LiveFragment"
        android:label="@string/nav_title_live"
        tools:layout="@layout/fragment_live"/>

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.study.playerdemoui.ui.music.MusicFragment"
        android:label="@string/nav_title_music"
        tools:layout="@layout/fragment_music"/>

    <fragment
        android:id="@+id/navigation_local_video"
        android:name="com.study.playerdemoui.ui.localvideo.LocalVideoFragment"
        android:label="@string/nav_title_local"
        tools:layout="@layout/fragment_loacl_video"/>
</navigation>